--- a/src/components/css/AddTask.css
+++ b/src/components/css/AddTask.css
@@ -1,3 +1,19 @@
-.addTaskContainer {
-    height: 20% !important;
+.addTaskFormContainer {
+    background-color: rgba(0, 0, 0, 0.7) !important;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.addTaskForm {
+    width: 100%;
+    padding: 10px;
+    background-color: #fff;
+}
+
+.addTaskForm__buttonsContainer {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 20px;
 }
